Align language, fix diagonal

--- a/src/css/pages/index.styl
+++ b/src/css/pages/index.styl
@@ -74,7 +74,7 @@
       top: 10px
       width: 200vw
       height: 80px
-      background: $hanzoIndigoDarker
+      background: $hanzoIndigo
       left: -1vw
       transform: rotate(.9deg)
 
